Thesis/ws/log/build_2023-04-11_15-47-42/locomotion_core/stdout_stderr.log
running egg_info
writing ../../build/locomotion_core/locomotion_core.egg-info/PKG-INFO
writing dependency_links to ../../build/locomotion_core/locomotion_core.egg-info/dependency_links.txt
writing entry points to ../../build/locomotion_core/locomotion_core.egg-info/entry_points.txt
writing requirements to ../../build/locomotion_core/locomotion_core.egg-info/requires.txt
writing top-level names to ../../build/locomotion_core/locomotion_core.egg-info/top_level.txt
reading manifest file '../../build/locomotion_core/locomotion_core.egg-info/SOURCES.txt'
writing manifest file '../../build/locomotion_core/locomotion_core.egg-info/SOURCES.txt'
running build
running build_py
copying locomotion_core/cmd_motors.py -> /home/vboxuser/ws/build/locomotion_core/build/lib/locomotion_core
running install
running install_lib
  File "/home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/cmd_motors.py", line 26
    minimal_subscriber = du_commander)
                                     ^
SyntaxError: unmatched ')'

copying /home/vboxuser/ws/build/locomotion_core/build/lib/locomotion_core/cmd_motors.py -> /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core
byte-compiling /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/cmd_motors.py to cmd_motors.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/locomotion_core/locomotion_core.egg-info to /home/vboxuser/ws/install/locomotion_core/lib/python3.10/site-packages/locomotion_core-0.0.0-py3.10.egg-info
running install_scripts
Installing driver script to /home/vboxuser/ws/install/locomotion_core/lib/locomotion_core
Installing du_commander script to /home/vboxuser/ws/install/locomotion_core/lib/locomotion_core
writing list of installed files to '/home/vboxuser/ws/build/locomotion_core/install.log'
